objects/Margin_Costs__c/Margin_Costs__c.object-meta.xml
<CustomObject>
    <label>Margin Cost</label>
    <nameField>
        <label>Margin Costs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Margin Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>