objects/Margin_Costs__c/fields/Base_Hosting_Cost__c.field-meta.xml
<CustomField>
    <fullName>Base_Hosting_Cost__c</fullName>
    <description>The base cost necessary for hosting</description>
    <label>Base Hosting Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>