objects/Margin_Costs__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <description>Used to determine if the record captures support cost or hosting cost for margin calculation</description>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Hosting</fullName>
            </value>
            <value>
                <fullName>HuntIQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>