objects/Margin_Costs__c/fields/Cumulative_Cost__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Cost__c</fullName>
    <description>The cumulative cost amount from the previous tiers</description>
    <label>Cumulative Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>