objects/Margin_Costs__c/fields/Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Type__c</fullName>
    <description>Used to match the type of deployment the margin is being calculated for</description>
    <label>Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>OnPrem</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>On-Prem</fullName>
                <isActive>false</isActive>
                <label>On-Prem</label>
            </value>
            <value>
                <fullName>TaaS</fullName>
                <isActive>false</isActive>
                <label>TaaS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>