objects/Margin_Costs__c/fields/ELV_Cost__c.field-meta.xml
<CustomField>
    <fullName>ELV_Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>