objects/Margin_Costs__c/fields/Max_Endpoint_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_Endpoint_Count__c</fullName>
    <description>Used for endpoint lookup when determining which tier the quote falls under. This field captures the upper limit of the tier.</description>
    <label>Max Endpoint Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>