objects/Margin_Costs__c/fields/Min_Endpoint_Count__c.field-meta.xml
<CustomField>
    <fullName>Min_Endpoint_Count__c</fullName>
    <description>Used for endpoint lookup when determining which tier the quote falls under. This field captures the lower limit of the tier.</description>
    <label>Min Endpoint Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>