objects/Margin_Costs__c/fields/Tier_Cost__c.field-meta.xml
<CustomField>
    <fullName>Tier_Cost__c</fullName>
    <description>The maximum cost amount for the tier</description>
    <label>Tier Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>