objects/Margin_Costs__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Margin_Type__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Deployment_Type__c</columns>
    <columns>Min_Endpoint_Count__c</columns>
    <columns>Max_Endpoint_Count__c</columns>
    <columns>Base_Hosting_Cost__c</columns>
    <columns>Cost_per_EP__c</columns>
    <columns>Tier_Cost__c</columns>
    <columns>Cumulative_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>